<resources>
    <string name="app_name">Android App</string>
    <string name="activity_main_xml">activity_main.xml</string>
    <string name="mainActivity_java">MainActivity.java</string>
    <string name="tutorial_android">Основы</string>
    <string name="Questions">Вопросы</string>
    <string name="share">Поделиться</string>
    <string name="rating">Оценить</string>
    <string name="settings">Настройки</string>
    <string name="Run">Запустить</string>
    <string name="begin_android"><b>Android</b> – открытая операционная система для мобильных телефонов, смартфонов, коммуникаторов, планшетных компьютеров, электронных книг, цифровых проигрывателей, наручных часов, нетбуков и смартбуков, основанная на ядре <b>Linux</b> и поддерживающая различные аппаратные платформы, такие как <b>ARM, MIPS, POWER, x86</b>.</string>
    <string name="begin_android1">Перед тем, как приступить к созданию <b>Android</b>-приложений, необходимо выбрать подходящий инструментарий разработки. \nКак правило, разработка <b>Android</b>-приложений осуществляется на языке <b>Java</b>.\nТак же есть более новый язык программирования, такой как <b>Kotlin</b> (его мы изучим в другом приложении).\nПрежде чем приступать к освоению программирования под <b>Android</b> по данному руководству, необходимо освоить хотя бы базовые моменты языка <b>Java</b>, иначе будет непонятно что к чему.\nЧто представляет из себя <b>Java</b>?</string>
    <string name="begin_android2"><b>Java</b> – это объектно-ориентированный язык программирования (ООП). \nПрограммы на <b>Java</b> транслируются в байт-код, выполняемый виртуальной машиной <b>Java</b>, которая обрабатывает байтовый код и передает инструкции оборудованию как интерпретатор. \nДостоинство подобного способа выполнения программ заключается в полной независимости байт-кода от операционной системы и оборудования, что позволяет выполнять <b>Java-приложения</b> на любом устройстве, для которого существует соответствующая виртуальная машина.\nИтак, для разработки программ на <b>Java</b> нам потребуется специальный комплект для разработки <b>JDK (Java Development Kit)</b>. \n<b>JDK</b> включает ряд программ и утилит, которые позволяют компилировать, запускать программы на <b>Java</b>, а также выполнять ряд других функций.</string>
    <string name="begin_android3">В данном приложении мы остановим свой выбор на <b>Android Studio</b></string>
    <string name="begin_android4">Далее мы приступим к скачиванию и установке)</string>
    <string name="begin_android5">Загрузить и установить соответствующую версию <b>JDK</b> можно с с официального сайта <b>Oracle</b>:</string>
    <string name="begin_android6">Выбираем <b>JDK Download</b></string>
    <string name="begin_android7">После того, как скачали,устанавливаем..</string>
    <string name="begin_android8"><u>Выбираем среду разработки</u></string>
    <string name="begin_android9">Среда разработки <b>Android</b>– это внедрение комплексных программных средств с целью создания ПО для гаджета (сокращенная аббревиатура <b>«IDE»</b>). \nВ некоторых случаях может вмещать в себе элементы интегрирования с управленческими системами и разный инструментарий, упрощающий построение графического изображения с нуля.</string>
    <string name="begin_android10">https://www.oracle.com/java/technologies/javase-downloads.html</string>
    <string name="AndroidStudio1">Загрузить файл установщика можно с официального сайта:</string>
    <string name="AndroidStudio2">https://developer.android.com/studio</string>
    <string name="AndroidStudio3">Не будем заострять большое внимание на мелочах, как установить, какую кнопку нажать, делаем всё по умолчанию.\nНе забываем что имя пользователя на вашем ПК должно быть на английском языке, иначе установить не получиться.\nПосле установки автоматически откроется окно приветствия)👌</string>
    <string name="lifecycle1">После запуска, Activity проходит через ряд событий:</string>
    <string name="lifecycle2">Схема Жизненного цикла</string>
    <string name="lifecycle3"><u>onCreate()</u></string>
    <string name="lifecycle4">onCreate - первый метод, с которого начинается выполнение activity. \nВ этом методе activity переходит в состояние Created. Этот метод обязательно должен быть определен в классе activity. \nВ нем производится первоначальная настройка activity.</string>
    <string name="lifecycle5"><u>onStart</u></string>
    <string name="lifecycle6">В методе onStart() осуществляется подготовка к выводу activity на экран устройства. \nКак правило, этот метод не требует переопределения, а всю работу производит встроенный код. После завершения работы метода activity отображается на экране, вызывается метод onResume, а activity переходит в состояние Resumed.</string>
    <string name="lifecycle7"><u>onResume</u></string>
    <string name="lifecycle8">При вызове метода onResume activity переходит в состояние Resumed и отображается на экране устройства, и пользователь может с ней взаимодействовать. \nИ собственно activity остается в этом состоянии, пока она не потеряет фокус</string>
    <string name="lifecycle9"><u>onPause</u></string>
    <string name="lifecycle10">Если пользователь решит перейти к другой activity, то система вызывает метод onPause, а activity переходит в состояние Paused. \nВ этом методе можно освобождать используемые ресурсы, приостанавливать процессы, например, воспроизведение аудио, анимаций, останавливать работу камеры (если она используется) и т.д., чтобы они меньше сказывались на производительность системы.</string>
    <string name="lifecycle11"><u>onStop</u></string>
    <string name="lifecycle12">В этом методе activity переходит в состояние Stopped. В этом состоянии activity полностью невидима. \nВ методе onStop следует особождать используемые ресурсы, которые не нужны пользователю, когда он не взаимодействует с activity.</string>
    <string name="lifecycle13"><u>onDestroy</u></string>
    <string name="lifecycle14">Ну и завершается работа activity вызовом метода onDestroy, который возникает либо, если система решит убить activity в силу конфигурационных причин (например, поворот экрана или при многоконном режиме), либо при вызове метода finish().</string>
    <string name="create_new_project1">На начальном экране выберем пункт <b>Create New Project</b>:</string>
    <string name="create_new_project2">При создании проекта в <b>Android Studio</b> в начале предложит нам выбрать шаблон проекта:</string>
    <string name="create_new_project3"><b>Android Studio</b> предоставляет ряд шаблонов, но мы выберем <b>Empty Activity</b> (Пустая активность)</string>
    <string name="create_new_project4">Нажмем на кнопку <b>Next</b>.\nПосле этого отобразится окно настроек нового проекта:</string>
    <string name="AndroidManifest1">Каждое приложение содержит файл манифеста <b>AndroidManifest.xml</b>. \nДанный файл определяет важную информацию о приложении - название, версию, иконки, какие разрешения приложение использует, регистрирует все используемые классы <b>activity</b>, сервисы и т.д. \n\nДанный файл можно найти в проекте в папке <b>manifests</b>:</string>
    <string name="AndroidManifest2">Файл манифеста может выглядеть так:</string>
    <string name="AndroidManifest3">Элементом корневого уровня является узел <b>manifest</b>. \nВ данном случае только определяется пакет приложения - <b>com.example.test</b>. \n\nБольшинство настроек уровня приложения определяются элементом <b>application</b>. Ряд настроек задаются с помощью атрибутов. \n\nПо умолчанию применяются следующие атрибуты:</string>
    <string name="AndroidManifest4"><b>android:allowBackup</b> указывает, будет ли для приложения создаваться резервная копия. \n\n<b>android:icon</b> устанавливает иконку приложения.\n\n<b>android:roundIcon</b> устанавливает круглую иконку приложения. Также берется из каталога <b>res/mipmap</b>.\n\n<b>android:label</b> задает название приложение, которое будет отображаться на мобильном устройстве в списке приложений и в заголовке.\n\n<b>android:supportsRtl</b> указывает, могут ли использоваться различные <b>RTL API</b> - специальные <b>API</b> для работы с правосторонней ориентацией текста (например, для таких языков как арабский или фарси).\n\n<b>android:theme</b> устанавливает тему приложения.</string>
    <string name="AndroidManifest5">Вложенные элементы <b>activity</b> определяют все используемые в приложении <b>activity</b>. \nВ данном случае видно, что в приложении есть только одна <b>activity</b> это <b>MainActivity</b>.</string>
    <string name="AndroidManifest6"><u>Установка разрешений</u></string>
    <string name="AndroidManifest7">Иногда приложению требуются разрешения на доступ к определенным ресурсам, например, к списку контактов, интернету и т.д. \nЧтобы приложение могло работать с тем же списком контактов, в файле манифесте необходимо установить соответствующие разрешения. \n\nДля установки разрешений применяется элемент <b>uses-permission</b></string>
    <string name="AndroidManifest8"><u>Запрет на изменение ориентации</u></string>
    <string name="AndroidManifest9">Приложение в зависимости от положения гаджета может находиться в альбомной и портретной ориентации.\n\nМы можем сделать, чтобы приложение вне зависимости от поворота гаджета использовало только одну ориентацию.\nДля этого в файле манифеста у требуемой <b>activity</b> надо установить атрибут <b>android:screenOrientation</b>. \n\nНапример, установим портретную ориентацию:</string>
    <string name="AndroidManifest10">Если же надо установить только альбомную ориентацию, тогда надо в <b>android:screenOrientation</b> прописать значение <b>landscape</b></string>
    <string name="ThemesLess3_1">Вместо использования встроенных тем мы можем создать свою.\n\nДля этого добавим в папку <b>res/values</b> новый файл <b>mythemes.xml</b></string>
    <string name="ThemesLess3_2">И определим в нем следующее содержимое:</string>
    <string name="ThemesLess3_3">Итак, мы создали стиль <b>MyTheme</b>, который унаследован от стиля <b>Theme.AppCompat.Light</b>.\n\nВ этом стиле мы переопределили два свойства: высоту шрифта (<b>textSize</b>), а также цвет текста (<b>textColor</b>).\n\nТеперь определим этот стиль в качестве темы приложения в файле <b>AndroidManifest.xml</b>:</string>
    <string name="ThemesLess3_4">Делаем такую разметку в <b>activity_main.xml</b></string>
    <string name="ThemesLess3_5">Как видно, для элементов <b>TextView</b> не устанавливается атрибут <b>textSize</b> и <b>textColor</b>, однако поскольку они определены в теме, которая применяется глобально к нашему приложению, то элементы <b>TextView</b> будут подхватывать эти стилевые характеристики:</string>
    <string name="Theme4_1">Выше темы применялись глобально ко всему приложению. Но также можно применить их к отдельному классу <b>Activity</b>.\n\nДля этого надо подкоррективать файл манифеста <b>AndroidManifest.xml</b>\n\nНапример:</string>
    <string name="Theme4_2">Атрибут <b>android:theme</b> элемента <b>activity</b> указывает на применяемую к <b>MainActivity</b> тему.\n\nТо есть глобально к приложению применяется тема <b>Theme.Test</b>, а к <b>MainActivity</b> - <b>MyTheme</b></string>
    <string name="Theme4_3"><u>Применение темы к иерархии виджетов</u></string>
    <string name="Theme4_4">Также можно применить тему к иерархии виджетов, установив атрибут <b>android:theme</b> у элемента, к которому (включая его вложенные элементы) мы хотим применить тему.\n\nНапример, применение темы к <b>ConstraintLayout</b> и ее элементам:</string>
</resources>