<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".styles_themes.ThemesLess4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextStylesTextView"
                android:text="@string/Theme4_1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageThemesLess4_1"
                    style="@style/ZoomImageView"/>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextStylesTextView"
                android:text="@string/Theme4_2"/>

            <TextView
                style="@style/TextStylesTextView"
                android:gravity="center"
                android:textSize="30sp"
                android:text="@string/Theme4_3"/>

            <TextView
                style="@style/TextStylesTextView"
                android:text="@string/Theme4_4"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageThemesLess4_2"
                    style="@style/ZoomImageView"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>