<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.AndroidManifestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageAndroidManifest1"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageAndroidManifest2"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageAndroidManifest3"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest6"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest7"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageAndroidManifest4"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest8"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest9"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/color_primary">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:id="@+id/imageAndroidManifest5"
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/coda"
                android:text="@string/AndroidManifest10"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>